# MangMayTinh

./: .gitignore  JSON_packet.md  README.md
Client/: main.py
Client/static/: main.js
Client/templates/: dashboard.html
Gateway/: package-lock.json  package.json
Gateway/src/: main.js  server.js
Gateway/src/core/: connection_manager.js
Gateway/src/utils/: logger.js
Gateway/src/websocket/: ws_server.js
Gateway/src/websocket/handlers/: agent_handler.js  web_handler.js
Gateway/src/websocket/utils/: message_relay.js
Server/lib/: service.h
Server/server/: CMakeLists.txt
Server/server/service/: list_process.cpp  server.cpp  start_process.cpp  stop_process.cpp
